# homeassistant_adguard_home

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  hacs.json  pyproject.toml  renovate.json
.beads/: issues.jsonl
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml  stale.yml
custom_components/adguard_home_extended/: __init__.py  binary_sensor.py  blocked_services.py  client_entities.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  filter_lists.py  manifest.json  sensor.py  services.yaml  strings.json  svg_utils.py  switch.py  version.py
custom_components/adguard_home_extended/api/: __init__.py  client.py  models.py
custom_components/adguard_home_extended/translations/: en.json
tests/: __init__.py  conftest.py  test_api_client.py  test_binary_sensor.py  test_blocked_services.py  test_client_entities.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_dns_rewrite.py  test_filter_lists.py  test_init.py  test_models.py  test_sensor.py  test_svg_utils.py  test_switch.py  test_version.py
